package Shodrone.console.ShowRequest.ui;

import eapli.framework.presentation.console.AbstractUI;

public class RegisterShowRequestUI extends AbstractUI {
    @Override
    protected boolean doShow() {
        return false;
    }

    @Override
    public String headline() {
        return "";
    }
}
