package core.Shared.domain.ValueObjects;

import eapli.framework.domain.model.ValueObject;
import eapli.framework.time.domain.model.TemporalEvent;
import eapli.framework.util.HashCoder;
import jakarta.persistence.Embeddable;

import java.time.LocalDate;
import java.util.Objects;
import java.util.function.UnaryOperator;

@Embeddable
public class Time {
}
