package core.ShowRequest.domain.ValueObjects;

public enum ShowRequestStatus {
}
